err/shock.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/netkit'...
Compiling './lib/python3.5/site-packages/netkit/box.py'...
***   File "./lib/python3.5/site-packages/netkit/box.py", line 100
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/netkit/contrib'...
Compiling './lib/python3.5/site-packages/netkit/contrib/tcp_client.py'...
***   File "./lib/python3.5/site-packages/netkit/contrib/tcp_client.py", line 62
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/netkit/stream.py'...
***   File "./lib/python3.5/site-packages/netkit/stream.py", line 214
    except socket.timeout, e:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/netkit-0.2.159.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setproctitle-1.1.10.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/shock'...
Compiling './lib/python3.5/site-packages/shock/config.py'...
***   File "./lib/python3.5/site-packages/shock/config.py", line 67
    raise t, v, tb
           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/shock-0.1.31.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
